--- a/src/app/routes/home/home.html
+++ b/src/app/routes/home/home.html
@@ -1,12 +1,12 @@
 <div class="flex gap-2">
   <p-inputgroup class="w-auto!">
-    <textarea class="w-xs! grow-0!" #announcemessage pInputText rows="1" placeholder="Message"></textarea>
+    <textarea class="w-xs! grow-0!" #announcemessage pInputText rows="1" placeholder="Announce message"></textarea>
     <button (click)="announce(announcemessage.value)" pButton>Announce</button>
   </p-inputgroup>
   <button (click)="save()" pButton>Save</button>
   <p-inputgroup class="w-auto!">
-    <textarea class="w-xs! grow-0!" #shutdownmessage pInputText rows="1" placeholder="Message"></textarea>
-    <p-inputnumber #waittime placeholder="Wait time (s)" />
+    <textarea class="w-xs! grow-0!" #shutdownmessage pInputText rows="1" placeholder="Shutdown message"></textarea>
+    <p-inputnumber class="w-xs! grow-0!" #waittime placeholder="Wait time (s)" />
     <button (click)="shutdown(waittime.value || 1, shutdownmessage.value)" pButton>Shutdown</button>
   </p-inputgroup>
   <button (click)="stop()" pButton>Stop</button>
