--- a/src/app/routes/home/home.html
+++ b/src/app/routes/home/home.html
@@ -1,73 +1,75 @@
-<div class="flex gap-2">
-  <p-inputgroup class="w-auto!">
-    <textarea class="w-xs! grow-0!" #announcemessage pInputText rows="1" placeholder="Announce message"></textarea>
-    <button (click)="announce(announcemessage.value)" pButton>Announce</button>
-  </p-inputgroup>
-  <button (click)="save()" pButton>Save</button>
-  <p-inputgroup class="w-auto!">
-    <textarea class="w-xs! grow-0!" #shutdownmessage pInputText rows="1" placeholder="Shutdown message"></textarea>
-    <p-inputnumber class="w-xs! grow-0!" #waittime placeholder="Wait time (s)" />
-    <button (click)="shutdown(waittime.value || 1, shutdownmessage.value)" pButton>Shutdown</button>
-  </p-inputgroup>
-  <button (click)="stop()" pButton>Stop</button>
-</div>
-<div class="text-xl font-semibold">Infos</div>
-<p-table [value]="infos()">
-  <ng-template #header>
-    <tr>
-      <th>Version</th>
-      <th>Name</th>
-      <th>Description</th>
-      <th>World GUID</th>
-    </tr>
-  </ng-template>
-  <ng-template #body let-serverinfo>
-    <tr>
-      <td>{{ serverinfo.version }}</td>
-      <td>{{ serverinfo.servername }}</td>
-      <td>{{ serverinfo.description }}</td>
-      <td>{{ serverinfo.worldguid }}</td>
-    </tr>
-  </ng-template>
-</p-table>
-<div class="text-xl font-semibold">Metrics</div>
-<p-table [value]="metrics()">
-  <ng-template #header>
-    <tr>
-      <th pSortableColumn="name">
-        <div class="flex items-center gap-2">
-          Metric
-          <p-columnFilter [showMenu]="false" matchMode="contains" type="text" field="name" filterOn="input" placeholder="Search" />
+@if (!metrics().length) {
+  <div class="text-xl font-semibold">Server offline !</div>
+} @else {
+  <div class="flex gap-2">
+    <p-inputgroup class="w-auto!">
+      <textarea class="w-xs! grow-0!" #announcemessage pInputText rows="1" placeholder="Announce message"></textarea>
+      <button (click)="announce(announcemessage.value)" pButton>Announce</button>
+    </p-inputgroup>
+    <button (click)="save()" pButton>Save</button>
+    <p-inputgroup class="w-auto!">
+      <textarea class="w-xs! grow-0!" #shutdownmessage pInputText rows="1" placeholder="Shutdown message"></textarea>
+      <p-inputnumber class="w-xs! grow-0!" #waittime placeholder="Wait time (s)" />
+      <button (click)="shutdown(waittime.value || 1, shutdownmessage.value)" pButton>Shutdown</button>
+    </p-inputgroup>
+    <button (click)="stop()" pButton>Stop</button>
+  </div>
+  <div class="text-xl font-semibold">Infos</div>
+  <p-table [value]="infos()">
+    <ng-template #header>
+      <tr>
+        <th>Version</th>
+        <th>Name</th>
+        <th>Description</th>
+        <th>World GUID</th>
+      </tr>
+    </ng-template>
+    <ng-template #body let-serverinfo>
+      <tr>
+        <td>{{ serverinfo.version }}</td>
+        <td>{{ serverinfo.servername }}</td>
+        <td>{{ serverinfo.description }}</td>
+        <td>{{ serverinfo.worldguid }}</td>
+      </tr>
+    </ng-template>
+  </p-table>
+  <div class="text-xl font-semibold">Metrics</div>
+  <p-table [value]="metrics()">
+    <ng-template #header>
+      <tr>
+        @for (column of metricsColumns(); track $index) {
+          <th>{{ column }}</th>
+        }
+      </tr>
+    </ng-template>
+    <ng-template #body let-metric>
+      <tr>
+        @for (column of metricsColumns(); track $index) {
+          <td>{{ metric[column] }}</td>
+        }
+      </tr>
+    </ng-template>
+  </p-table>
+  <br />
+  <div class="text-xl font-semibold">Settings</div>
+  <p-table [value]="settings()">
+    <ng-template #header>
+      <tr>
+        <th class="flex items-center gap-2" pSortableColumn="name">
+          Setting
+          <p-columnFilter [showMenu]="false" (click)="$event.stopPropagation()" matchMode="contains" type="text" field="name" filterOn="input" placeholder="Search" />
           <p-sortIcon field="name" />
-        </div>
-      </th>
-      <th>Value</th>
-    </tr>
-  </ng-template>
-  <ng-template #body let-metric>
-    <tr>
-      <td>{{ metric.name }}</td>
-      <td>{{ metric.value }}</td>
-    </tr>
-  </ng-template>
-</p-table>
-<br />
-<div class="text-xl font-semibold">Settings</div>
-<p-table [value]="settings()">
-  <ng-template #header>
-    <tr>
-      <th class="flex items-center gap-2" pSortableColumn="name">
-        Setting
-        <p-columnFilter [showMenu]="false" matchMode="contains" type="text" field="name" filterOn="input" placeholder="Search" />
-        <p-sortIcon field="name" />
-      </th>
-      <th>Value</th>
-    </tr>
-  </ng-template>
-  <ng-template #body let-setting>
-    <tr>
-      <td>{{ setting.name }}</td>
-      <td>{{ setting.value }}</td>
-    </tr>
-  </ng-template>
-</p-table>
+        </th>
+        <th>Value</th>
+        <th>Type</th>
+      </tr>
+    </ng-template>
+    <ng-template #body let-setting>
+      <tr>
+        <td>{{ setting.name }}</td>
+        <td>{{ setting.value }}</td>
+        <td>{{ setting.type }}</td>
+      </tr>
+    </ng-template>
+  </p-table>
+}
