--- a/src/app/routes/players/players.html
+++ b/src/app/routes/players/players.html
@@ -2,51 +2,33 @@
   <input #userid pInputText placeholder="userId" />
   <button (click)="unban(userid.value)" pButton>Unban</button>
 </p-inputgroup>
-<p-table [(contextMenuSelection)]="player" [value]="players()" [contextMenu]="cm">
-  <ng-template #header>
-    <tr>
-      <!-- <th class="flex items-center gap-2" pSortableColumn="name">
-        Metric
-        <p-columnFilter [showMenu]="false" matchMode="contains" type="text" field="name" filterOn="input" placeholder="Search" />
-        <p-sortIcon field="name" />
-      </th> -->
-      <th pSortableColumn="name">
-        <div class="flex items-center gap-2">
-          Name
-          <p-columnFilter class="w-auto" [showMenu]="false" matchMode="contains" type="text" field="name" filterOn="input" placeholder="Search" />
-          <p-sortIcon field="name" />
-        </div>
-      </th>
-      <th pSortableColumn="accountName">
-        <div class="flex items-center gap-2">
-          Account Name
-          <p-columnFilter [showMenu]="false" matchMode="contains" type="text" field="accountName" filterOn="input" placeholder="Search" />
-          <p-sortIcon field="accountName" />
-        </div>
-      </th>
-      <th>Building Count</th>
-      <th>IP</th>
-      <th>Level</th>
-      <th>Location x</th>
-      <th>Location y</th>
-      <th>Ping</th>
-      <th>Player Id</th>
-      <th>User Id</th>
-    </tr>
-  </ng-template>
-  <ng-template #body let-player>
-    <tr [pContextMenuRow]="player">
-      <td>{{ player.name }}</td>
-      <td>{{ player.accountName }}</td>
-      <td>{{ player.building_count }}</td>
-      <td>{{ player.ip }}</td>
-      <td>{{ player.level }}</td>
-      <td>{{ player.location_x }}</td>
-      <td>{{ player.location_y }}</td>
-      <td>{{ player.ping }}</td>
-      <td>{{ player.playerId }}</td>
-      <td>{{ player.userId }}</td>
-    </tr>
-  </ng-template>
-</p-table>
-<p-contextmenu #cm [model]="menu" (onHide)="player = undefined" />
+@if (!players().length) {
+  <div class="text-xl font-semibold">No player</div>
+} @else {
+  <div class="text-xl font-semibold">Players</div>
+  <p-table [(contextMenuSelection)]="player" [value]="players()" [contextMenu]="cm">
+    <ng-template #header>
+      <tr>
+        @for (column of columns(); track $index) {
+          <th [pSortableColumn]="['name', 'accountName'].includes(column) ? column : undefined" [pSortableColumnDisabled]="!['name', 'accountName'].includes(column)">
+            <div [ngClass]="{ 'flex items-center gap-2': ['name', 'accountName'].includes(column) }">
+              {{ column }}
+              @if (["name", "accountName"].includes(column)) {
+                <p-columnFilter [showMenu]="false" [field]="column" (click)="$event.stopPropagation()" matchMode="contains" type="text" filterOn="input" placeholder="Search" />
+                <p-sortIcon [field]="column" />
+              }
+            </div>
+          </th>
+        }
+      </tr>
+    </ng-template>
+    <ng-template #body let-player>
+      <tr [pContextMenuRow]="player">
+        @for (column of columns(); track $index) {
+          <td>{{ player[column] }}</td>
+        }
+      </tr>
+    </ng-template>
+  </p-table>
+  <p-contextmenu #cm [model]="menu" (onHide)="player = undefined" />
+}
